[package]
name = "sylva-agent"
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
description = "Sylva machine agent — the headless, always-on device service (machine/management plane). Registers + checks in with a Sylva Server over the sylva-sdk transport."
publish = false

[dependencies]
# The shared client core: discovery + TOFU pinning + the generated gRPC stubs
# (incl. the Machine client). The agent is a new consumer of the same core the
# WinUI app uses.
sylva-sdk = { path = "../sylva-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "net"] }
tonic = "0.14"
# The machine identity key: Ed25519 keygen + the proof-of-possession signature.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
